# FASER

./: .gitignore  INSTALL.md  Makefile  Makefile.common  README.md  README_anna.md  TAbsFitParticle.cc  TFitConstraintEp.cc  TFitConstraintEp.h  TKinFitter.cc  a.C  datacards.txt  faserntuplib.cc  faserntuplib.hh  genfit.patch  lxplus_setup.csh  lxplus_setup.sh  lxplus_setup_anna.sh  mac_setup.sh  rave.patch  s.C  setup.sh  setup_umut.sh  skel.h  t.C
Analysis/: AnalyReco.cc  LinkDef.h  Makefile  plots.C
Batch/: .gitignore  BatchReco.cc  DumpHits.cc  LinkDef.h  Makefile  go  inspect_mdt.C  pcalplots.C  pgunplots.C  plotcharm.C  plots.C
BatchReco/: BatchReco.cc  Makefile  TPORecoEvent.cc
ConvertFASERMC/: Convert.cc  LinkDef.h  Makefile
ConvertGENIE/: CombineFluxes.C  ConvertGENIE.cc  ConvertGENIE_ahcal.cc  ConvertGENIE_ecal.cc  ESstudy.C  LinkDef.h  Makefile  countInteractions.cc  countinteractions_tpoevent.cc  dumpPOEvents.C  etaCoverage.cc  etaCoverage_geometry.cc  genie_run.ipynb  mycombine.sh  mycompile.sh  myconvert.sh  plotInteractionVertices  plotInteractionVertices.cc  plotInteractionsByDetector_gdml.C  plotPO.C  plot_beam_spot.C  readme  whatidid
CoreUtils/: DBScan.cc  DBScan.hh  GenMagneticField.cc  GenMagneticField.hh  LinkDef.h  Makefile  TFileMask.hh  TMuTrack.cc  TMuTrack.hh  TMuonSpect.cc  TMuonSpect.hh  TPOEvent.cc  TPOEvent.hh  TPORecoEvent.cc  TPORecoEvent.hh  TPSCluster.cc  TPSCluster.hh  TPSTrack.cc  TPSTrack.hh  TParticleGun.cc  TParticleGun.hh  TTKTrack.cc  TTKTrack.hh  TTauSearch.cc  TTauSearch.hh  TcalEvent.cc  TcalEvent.hh  dumpReco.C
Display/: CMakeLists.txt  DumpEventList.cxx  DumpMuonHits.cxx  DumpMuonSpectrometer.cxx  FaserCalAnalyzer.cxx  FaserCalAnalyzer2nd.cxx  FaserCalDisplay.cxx  FaserCalDisplay.h  FaserCalMuonSpectrometer.cxx  analyze_muon_data.C  disp_linkdef.h  main.cxx  plot_muon_genfit_taubin.C  plot_muon_reconstruction.C  plot_resolution_vs_energy.C  run_plots_for_all_energies.sh
Display/Plots/: AnalysisData.root  FaserCalRecoPlot.h  Makefile  Plots  Plots.C  Summary_charm_particles.csv  Summary_decay_modes.csv  Summary_multimuon.csv  Summary_mutag_signs.csv  Summary_summary.csv  TreeManager.C  TreeManager.h  TreeManager.h~  TreeManager_C.d  TreeManager_C_ACLiC_dict_rdict.pcm  test.root
EvDisplay/: LinkDef.h  Makefile  MyMainFrame.cc  MyMainFrame.h  browseGeom.C  evDisplay.C
FASERCalG4/include/: DetectorConstruction.hh  LinkDef.h  TauDecayPhysics.hh  Track.hh
FASERCalG4/src/: DetectorConstruction.cc  ParticleManager.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  TauDecayPhysics.cc
FASERCalProtoG4/: CMakeLists.txt  NEUTRON_SPECTRUM_RUN.md  RunFASER_neutrino_GENIE.mac  RunFASER_neutron_spectrum.mac  RunFASER_prototype.mac  RunFASER_tilted.mac  visualize_voxels_and_muons.py
FASERCalProtoG4/include/: CustomTauDecay.hh  DetectorConstruction.hh  DetectorMessenger.hh  MuonDetMagneticField.hh  ParticleManager.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  TrackerSD.hh
FASERCalProtoG4/src/: DetectorConstruction.cc  DetectorMessenger.cc  ParticleManager.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  Track.cc  TrackerSD.cc
FASERG4/: CMakeLists.txt  RunFASER_newgeo.mac  RunFASER_tilted.mac  faserps.cc  runFASER.mac  runFASER_1.1.mac  runFASER_1.mac  runFASER_15modules.mac  runFASER_2.mac  runFASER_25_nuES.mac  runFASER_35_nuES.mac  runFASER_TI12.mac  runFASER_V5.mac  runFASER_V6_tilted.mac  runFASER_muon.mac  runFASER_nuNC.mac  runFASER_nueCC.mac  runFASER_numuCC.mac  runFASER_nutauCC.mac  runFASER_tau.mac
FASERG4/include/: ActionInitialization.hh  CharmDecayPhysics.hh  CustomCharmDecay.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  Geant4Process.hh  LinkDef.h  MDTSD.hh  ParticleManager.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  Track.hh  TrackerSD.hh  typedef.h
FASERG4/src/: ActionInitialization.cc  CharmDecayPhysics.cc  CustomCharmDecay.cc  CustomTauDecay.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  MDTSD.cc  MuonDetMagneticField.cc  ParticleManager.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  TauDecayPhysics.cc  Track.cc  TrackerSD.cc
FileMask/: FileMask.cc  LinkDef.h  Makefile
GeomGDML/: CheckGeometry.C  FaserNu3.gdml  Geometry.C  PlotGeometry.C  geometry.gdml  geometry_tilted_5degree.gdml  geometry_v5.gdml
Python_io/: README.md  generateLib.sh  generate_dataset.py
Python_io/lib/: Classes.h  LinkDef.h
TauSearch/: Exceptions.h  Makefile  TAbsFitConstraint.cc  TFitParticleESpher.cc  TFitParticleESpher.h  TKinFitter.h  faserntuplib.cc  go  s.C
docs/: MuonSpectrometerReport.md
rave/: config.h.in  configure  rave_autoconf.i
rave/java/: rave.cc  rave.h
rave/src/boost/date_time/: c_time.hpp  date.hpp  date_duration.hpp  date_facet.hpp  date_formatting.hpp  date_generators.hpp  date_iterator.hpp  date_names_put.hpp  date_parsing.hpp  dst_rules.hpp  filetime_functions.hpp  format_date_parser.hpp  gregorian_calendar.ipp  (+9 more)
vbuild/1000GeV/: muon_prel_vs_nhits_genfit.csv  muon_prel_vs_nhits_taubin.csv  muon_prel_vs_nstations_genfit.csv  muon_prel_vs_nstations_taubin.csv  muon_resolution_table.csv
vbuild/100GeV/: muon_prel_vs_nhits_genfit.csv  muon_prel_vs_nhits_taubin.csv  muon_prel_vs_nstations_genfit.csv  muon_prel_vs_nstations_taubin.csv  muon_resolution_table.csv
vbuild/150GeV/: muon_prel_vs_nhits_genfit.csv  muon_prel_vs_nhits_taubin.csv  muon_prel_vs_nstations_genfit.csv  muon_prel_vs_nstations_taubin.csv  muon_resolution_table.csv
vbuild/250GeV/: muon_prel_vs_nhits_genfit.csv  muon_prel_vs_nhits_taubin.csv  muon_prel_vs_nstations_genfit.csv  muon_prel_vs_nstations_taubin.csv  muon_resolution_table.csv
vbuild/500GeV/: muon_prel_vs_nhits_genfit.csv  muon_prel_vs_nhits_taubin.csv  muon_prel_vs_nstations_genfit.csv  muon_prel_vs_nstations_taubin.csv  muon_resolution_table.csv
vbuild/50GeV/: muon_prel_vs_nhits_genfit.csv  muon_prel_vs_nhits_taubin.csv  muon_prel_vs_nstations_genfit.csv  muon_prel_vs_nstations_taubin.csv  muon_resolution_table.csv
(+78 files in other folders)
